Version 0.7.1 -- Subversion
-----------------

* Fixed email in add/edit user to accept 255 characters (#000003)
* Fixed htmlblob NOTICE level messages (#000005)

Version 0.7 -- Mon Oct 11 2004
-----------------

* Added HTML blobs for easy administration of small chunks of html (Genie #3)
* Added Image Manager to the files section for advanced image handling functions
* Added horizontal option to dhtmlmenu (leen)
* Added new admin style
* Added new install and upgrade look
* Added language as a user perference and also moved it to the login page
* Added java based syntax highlighting as a user preference
* Added support for mysql 4.1+ using the mysqli adodb driver
* Added cancel link to login page that redirects back to site (Genie #6)
* Added auto_upgrade functionality to modules (Genie #4)
* Added more intelligent handling of file types to file management
* Added ability to override the default encoding of the whole site, admin included (Genie #15)
* Fixed News module so that post date shows on newly created items (Genie #5)
* Fixed bug with start and end dates when adding new News item (BamaRob)
* Fixed missing template option for News module (trac #67)
* Updated adodb to 4.53

Version 0.6.3 -- Wed Sep 22 2004 
-----------------

* Fixed a very bad bug where you can login with no password

Version 0.6.2 -- Tue Sep 20 2004 
-----------------

* Added Chinese translations (ray)
* Added dateformat parameter to News
* Added showtemplate parameter to moduleinterface.php, so you can do things
like show just an RSS feed and nothing else.
* Fixed a bug with html entities not getting converted properly after preview
or saved. (Fixes #62, #65)
* Fixed bug with bug with news when it's the content type.
* Updated the defalt website to be a little more up to date with the current
feature set

Version 0.6.1 -- Tue Sep 14 2004
-----------------

* Added section header content type
* Added cms_selflink plugin